--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section>
+            <h4></h4>
+            <h4></h4>
+            <h4></h4>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
