--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             </div>
         </main>
         <section>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
+            <h5>How does Javascript work?</h5>
+            <h5>What does JS event loop do?</h5>
+            <h5>Difference between local storage and sesssion storage</h5>
         </section>
         <footer></footer>
 
