final changes added

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
             </div>
         </main>
         <section>
-            <h5>How does Javascript work?</h5>
-            <h5>What does JS event loop do?</h5>
-            <h5>Difference between local storage and sesssion storage</h5>
+            <h6>How does Javascript work?</h6>
+            <p>Ans: Javascript is a client side scripting language. So JS is basically a programming language which runs through internet browser. We can say, JavaScript is an interpreted language. This language doesn't need any compilation. Rather, the browser reads over the code, interpret and run it. JavaScript gives a dynamic look to the webpage. Now we can see latest browsers have their own Javascript engines to interpret easily.</p>
+            <h6>What does JS event loop do?</h6>
+            <p>Ans: The event loop in JavaScript is a process that keeps running continuously and checks main stack. When the Stack is clear, the event loop is called for checking the task queue for available callbacks. If there is any callbacks, it pushes to the callstack, waits to be clear again. And this process is being repeated. So, we can say that JS event loop has one job, to monitor callstack and callback queue.</p>
         </section>
         <footer></footer>
 
